--- a/views/index.pug
+++ b/views/index.pug
@@ -2,10 +2,16 @@ doctype html
 html
   head
     title Hometown Bakery
+    include stylesheets.pug
 
   body
-    h1 Hometown Bakery
-    block nav
+    include nav
+    img(src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvzFZRY0Re01sNb0G2yldnAP3P3gEhe9ExGjNwIjWvXfQbs81P")
+
+    block content
+      h3 Our Story
+      p Our Bakery is really awesome, we just started yesterday.  Buy our baked goods, please.
+
 
 
 
