Finished exercise requirements

--- a/views/about.pug
+++ b/views/about.pug
@@ -1,4 +1,5 @@
 extend index.pug
 
 block content
-  p test about page
+  h3 About Me, oh yeah and the bakery too
+  p I'm the coolest person who loves baked goods.  Because of that I decided to make my own bakery.  We specialize in donuts. Buy them.
