--- a/views/index.pug
+++ b/views/index.pug
@@ -6,11 +6,12 @@ html
 
   body
     include nav
-    img(src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvzFZRY0Re01sNb0G2yldnAP3P3gEhe9ExGjNwIjWvXfQbs81P")
+    img.bakery(src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvzFZRY0Re01sNb0G2yldnAP3P3gEhe9ExGjNwIjWvXfQbs81P")
 
-    block content
-      h3 Our Story
-      p Our Bakery is really awesome, we just started yesterday.  Buy our baked goods, please.
+    div.content
+      block content
+        h3 Our Story
+        p Our Bakery is really awesome, we just started yesterday.  Buy our baked goods, please.
 
 
 
