--- a/views/inventory.pug
+++ b/views/inventory.pug
@@ -5,4 +5,4 @@ block content
   h3 Our Popular Items
   ul
     each value, key in popularPastries
-      li #{key}: #{value}
+      li #{key}: #{value.price}
