Completed inserting time into about page

--- a/views/inventory.pug
+++ b/views/inventory.pug
@@ -3,6 +3,5 @@ extend index.pug
 block content
 
   h3 Our Popular Items
-  ul
-    each value, key in popularPastries
-      li #{key}: #{value.price}
+  each item in popularPastries
+    p #{item.name}: #{item.price}
