--- a/views/about.pug
+++ b/views/about.pug
@@ -3,3 +3,5 @@ extend index.pug
 block content
   h3 About Me, oh yeah and the bakery too
   p I'm the coolest person who loves baked goods.  Because of that I decided to make my own bakery.  We specialize in donuts. Buy them.
+
+  p Today's date is #{date}.
