Finished bonus exercise, modularied pug templates

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,17 +1,24 @@
-doctype html
-html
-  head
-    title Hometown Bakery
-    include stylesheets.pug
+extend layout.pug
 
-  body
-    include nav
-    img.bakery(src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvzFZRY0Re01sNb0G2yldnAP3P3gEhe9ExGjNwIjWvXfQbs81P")
+block content
+  h3 Our Story
+  p Our Bakery is really awesome, we just started yesterday.  Buy our baked goods, please.
 
-    div.content
-      block content
-        h3 Our Story
-        p Our Bakery is really awesome, we just started yesterday.  Buy our baked goods, please.
+
+//- doctype html
+//- html
+//-   head
+//-     title Hometown Bakery
+//-     include stylesheets.pug
+
+//-   body
+//-     include nav
+//-     img.bakery(src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvzFZRY0Re01sNb0G2yldnAP3P3gEhe9ExGjNwIjWvXfQbs81P")
+
+//-     div.content
+//-       block content
+//-         h3 Our Story
+//-         p Our Bakery is really awesome, we just started yesterday.  Buy our baked goods, please.
 
 
 
